--- a/(3).ipynb
+++ b/(3).ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "(3).ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMQk0PEpwT7e4KJhzk435dW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/magiceagle9/Assignment/blob/main/(3).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
